--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
+    "test": "jest",
     "test:recurring": "tsx scripts/test-recurring-tasks.ts",
     "test:scheduling": "tsx scripts/test-task-scheduling.ts"
   },
@@ -66,11 +67,14 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "jest": "^30.2.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.19.0",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
