--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.3",
     "next-themes": "latest",
+    "pnpm": "^10.24.0",
     "react": "19.2.0",
     "react-day-picker": "latest",
     "react-dom": "19.2.0",
